[package]
name = "tracexec"
version = "0.12.0"
edition = "2024"
authors = ["Levi Zim <rsworktech@outlook.com>"]
description = "Tracer for execve{,at} and pre-exec behavior, launcher for debuggers."
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/kxxt/tracexec"
homepage = "https://github.com/kxxt/tracexec"
keywords = ["trace", "ptrace", "exec", "execve", "utility"]
categories = ["command-line-utilities", "development-tools::debugging"]
default-run = "tracexec"
rust-version = "1.85"
exclude = ["/casts", "/screenshots"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
nix = { version = "0.29", features = [
    "ptrace",
    "process",
    "feature",
    "term",
    "fs",
    "signal",
    "user",
] }
strum = { version = "0.27.1", features = ["derive"] }
cfg-if = "1.0.0"
owo-colors = { version = "4.0.0", package = "kxxt-owo-colors", features = [
    "global-colorized-control",
] }
shell-quote = { version = "0.7.1" }
atoi = "2.0.0"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "6"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.30"
signal-hook = "0.3.17"
better-panic = "0.3.0"
itertools = "0.14.0"
tui-term = "0.2.0"
filedescriptor = "0.8.2"
vt100 = "0.15.2"
bytes = "1.6.0"
filterable-enum = { version = "0.1.1" }
enumflags2 = "0.7.9"
arboard = { version = "3.3.2", default-features = false, features = [
    "wayland-data-control",
] }
tui-popup = "0.6.0"
thiserror = "2"
tui-scrollview = "0.5.0"
bitflags = "2.5.0"
tui-prompts = "0.5.0"
unicode-segmentation = "1.11.0"
unicode-width = "0.2.0"
serial_test = { version = "3.1.1", features = ["file_locks"] }
clap_complete = "4.5.2"
regex-cursor = { version = "0.1.4", default-features = false }
shell-words = "1.1.0"
tui-widget-list = "0.13"
either = "1.12.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
paste = "1.0.15"
serde_json = "1.0.120"
libbpf-rs = { version = "0.25.0-beta.1", optional = true, default-features = false }
# libbpf-sys exists here because we want to control its features
libbpf-sys = { version = "1", optional = true, default-features = false }
libseccomp = "0.4.0"
weak-table = { version = "0.3.2", default-features = false, features = [
    "ahash",
] }
rand = "0.9"
hashbrown = "0.15.2"
indexset = "0.12"
chrono = "0.4.40"
nutype = { version = "0.6.1", features = ["serde"] }
humantime = "2.2.0"
opentelemetry = { version = "0.29.1", features = ["futures"] }
opentelemetry_sdk = "0.29.0"
url = { version = "2.5.4", features = ["serde"] }
mini-moka = "0.10.3"
# This is a transitive dependency.
# We just want to set its features
zstd = { version = "*" }

[dependencies.opentelemetry-otlp]
version = "0.29.0"
default-features = false
package = "tracexec-opentelemetry-otlp"
features = [
    "trace", # We are not using metrics and logs
    # GRPC, use tonic and zstd compression with system trust roots
    "grpc-tonic",
    "zstd-tonic",
    "tls-roots",
    # HTTP, use reqwest and rustls with system trust roots
    "http-proto",
    "reqwest-blocking-client",
    # "reqwest-client", # https://github.com/open-telemetry/opentelemetry-rust/issues/2673
    "reqwest-rustls",
]
# tui-prompts = { version = "0.3.11", path = "../../contrib/tui-prompts" }
# tui-popup = { version = "0.3.0", path = "../../contrib/tui-popup" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

rstest = "0.25.0"
tracing-test = "0.2.4"

[build-dependencies]
libbpf-cargo = { version = "0.24.6", default-features = false }


[features]
default = ["recommended", "vendored-libbpf", "dynamic-libzstd"]
recommended = ["ebpf"]
ebpf = ["dep:libbpf-rs", "dep:libbpf-sys"]
# The ebpf-debug feature is not meant for end users.
# This feature also has a bug:
# Building with --release after building --release -F ebpf-debug
# produces binaries with ebpf-debug enabled!
# Either cargo doesn't rebuild and run build.rs on feature flag change,
# or some logic is wrong in build.rs
ebpf-debug = ["ebpf"]
ebpf-no-rcu-kfuncs = [
    "ebpf",
] # Avoid using rcu helpers. Necessary for kernel version < 6.2
static = ["libbpf-sys/static"]
vendored = ["libbpf-sys/vendored", "vendored-libbpf"]
vendored-libbpf = ["libbpf-sys/vendored-libbpf", "libbpf-cargo/default"]
dynamic-libzstd = ["zstd/pkg-config"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true

[[bin]]
name = "exec-file"
path = "fixtures/exec-file.rs"

[[bin]]
name = "empty-argv"
path = "fixtures/empty-argv.rs"

[[bin]]
name = "corrupted-envp"
path = "fixtures/corrupted-envp.rs"


[[bin]]
name = "exec-stress"
path = "fixtures/exec-stress.rs"
