[package]
name = "perfetto-trace-proto"
description = "prost binding to perfetto trace protobuf format"
version = "0.1.0+g4c6784a1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kxxt/tracexec/tree/main/crates/perfetto-trace-proto"
homepage = "https://github.com/kxxt/tracexec/tree/main/crates/perfetto-trace-proto"

[lints.clippy]
all = "allow"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = "0.14.1"
