[package]
name = "tracexec-backend-ebpf"
version = "0.1.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
ebpf-debug = []
ebpf-no-rcu-kfuncs = [] # Avoid using rcu helpers. Necessary for kernel version < 6.2
static = ["libbpf-sys/static"]
vendored = ["libbpf-sys/vendored", "vendored-libbpf"]
vendored-libbpf = ["libbpf-sys/vendored-libbpf", "libbpf-cargo/default"]


[dependencies]
nix = { workspace = true }
enumflags2 = { workspace = true }
tracexec-core = { workspace = true, features = ["ebpf"] }
hashbrown = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytemuck = "1.24.0"
libbpf-rs = { version = "0.25", default-features = false }
# libbpf-sys exists here because we want to control its features
libbpf-sys = { version = "1", default-features = false }


[build-dependencies]
libbpf-cargo = { version = "0.25", default-features = false }
