[package]
name = "tracexec-backend-ebpf"
description = "eBPF backend for tracexec [Internal implementation! DO NOT DEPEND ON!]"
version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["vendored-libbpf"]
ebpf-debug = []
static = ["libbpf-sys/static"]
vendored = ["libbpf-sys/vendored", "vendored-libbpf"]
vendored-libbpf = ["libbpf-sys/vendored-libbpf", "libbpf-cargo/default"]


[dependencies]
nix = { workspace = true }
enumflags2 = { workspace = true }
tracexec-core = { workspace = true, features = ["ebpf"] }
hashbrown = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
cfg-if = { workspace = true }
tokio = { workspace = true }
bytemuck = "1.24.0"
libbpf-rs = { version = "0.26.1", default-features = false }
# libbpf-sys exists here because we want to control its features
libbpf-sys = { version = "1", default-features = false }
procfs = "0.18.0"


[build-dependencies]
libbpf-cargo = { version = "0.26.1", default-features = false }

[dev-dependencies]
rusty-fork = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "compat-exec"
path = "../../fixtures/compat-exec.rs"
