[package]
name = "tracexec-backend-ebpf"
description = "eBPF backend for tracexec [Internal implementation! DO NOT DEPEND ON!]"
version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["vendored-libbpf"]
bpfcov = ["dep:bpfcov", "dep:regex-lite"]
ebpf-debug = []
static = ["libbpf-sys/static"]
verifier-complexity = ["dep:serde", "dep:serde_json"]
vendored = ["libbpf-sys/vendored", "vendored-libbpf"]
vendored-libbpf = ["libbpf-sys/vendored-libbpf", "libbpf-cargo/default"]


[dependencies]
nix = { workspace = true }
enumflags2 = { workspace = true }
tracexec-core = { workspace = true, features = ["ebpf"] }
hashbrown = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
cfg-if = { workspace = true }
tokio = { workspace = true }
bytemuck = "1.24.0"
libbpf-rs = { version = "0.26.1", default-features = false }
# libbpf-sys exists here because we want to control its features
libbpf-sys = { version = "1", default-features = false }
procfs = "0.18.0"
bpfcov = { version = "0.3.0-alpha.1", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }


[build-dependencies]
libbpf-cargo = { version = "0.26.1", default-features = false }
bpfcov = { version = "0.3.0-alpha.1", default-features = false, features = ["vendored"], optional = true }
regex-lite = { version = "0.1", optional = true }

[dev-dependencies]
rusty-fork = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "compat-exec"
path = "../../fixtures/compat-exec.rs"

[[bin]]
name = "special-fds-exec"
path = "../../fixtures/special-fds-exec.rs"

[[bin]]
name = "tracexec-verifier-complexity"
path = "src/bin/verifier_complexity.rs"
required-features = ["verifier-complexity"]
