[package]
name = "tracexec-core"
description = "Core crate of tracexec [Internal implementation! DO NOT DEPEND ON!]"
version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
ebpf = []

[dependencies]
filterable-enum = { version = "0.1.1" }
enumflags2 = "0.7.9"
regex-cursor = { version = "0.1.4", default-features = false }
filedescriptor = "0.8.2"
clap_complete = "4.5.2"
directories = "6"
toml = "0.9"
paste = "1.0.15"
shell-quote = { workspace = true }
bitflags = { workspace = true }
itertools = { workspace = true }
nutype = { workspace = true }
serde = { workspace = true }
owo-colors = { workspace = true }
nix = { workspace = true }
either = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
internment = { version = "0.8.6", default-features = false, features = ["arc", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.24.0"
