[package]
name = "tracexec-exporter-json"
version = "0.1.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracexec-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0.120"
