[package]
name = "tracexec-exporter-json"
description = "JSON exporter for tracexec [Internal implementation! DO NOT DEPEND ON!]"
version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracexec-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0.120"
